[gd_scene load_steps=11 format=2]

[ext_resource path="res://title_menu/title_menu.gd" type="Script" id=1]
[ext_resource path="res://confirmation/confirmation.tscn" type="PackedScene" id=2]
[ext_resource path="res://setting_menu/Setting_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_menu/img/choose_exit.png" type="Texture" id=4]
[ext_resource path="res://title_menu/img/choose_setting.png" type="Texture" id=5]
[ext_resource path="res://title_menu/img/exit.png" type="Texture" id=6]
[ext_resource path="res://title_menu/img/bg.png" type="Texture" id=7]
[ext_resource path="res://title_menu/img/start.png" type="Texture" id=8]
[ext_resource path="res://title_menu/img/choose_start.png" type="Texture" id=9]
[ext_resource path="res://title_menu/img/setting.png" type="Texture" id=10]

[node name="title_menu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="exit_confirmation" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="setting_menu" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true

[node name="grid_container" type="GridContainer" parent="."]
margin_left = 38.0
margin_top = 75.0
margin_right = 188.0
margin_bottom = 245.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/vseparation = 10

[node name="start_button" type="TextureButton" parent="grid_container"]
margin_right = 150.0
margin_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 9 )

[node name="setting_button" type="TextureButton" parent="grid_container"]
margin_top = 64.0
margin_right = 150.0
margin_bottom = 118.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 10 )
texture_focused = ExtResource( 5 )

[node name="exit_button" type="TextureButton" parent="grid_container"]
margin_top = 128.0
margin_right = 150.0
margin_bottom = 182.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 4 )

[connection signal="pressed" from="grid_container/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="grid_container/setting_button" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="grid_container/exit_button" to="." method="_on_exit_button_pressed"]
